--- a/templates/dnsmasq.conf.erb
+++ b/templates/dnsmasq.conf.erb
@@ -15,23 +15,28 @@ port=<%= @port %>
 #port=5353
 <%- end -%>
 
-
-# The following two options make you a better netizen, since they
-# tell dnsmasq to filter out queries which the public DNS cannot
-# answer, and which load the servers (especially the root servers)
-# unnecessarily. If you have a dial-on-demand link they also stop
-# these requests from bringing up the link unnecessarily.
-
 # Never forward plain names (without a dot or domain part)
+<% if domain_needed %>
 domain-needed
+<%- else -%>
+#domain-needed
+<%- end -%>
 # Never forward addresses in the non-routed address spaces.
-# 不转发在不可路由地址空间(non-routed address spaces)中的地址
+# 不转发在非路由地址空间(non-routed address spaces)中的地址
+<% if bogus_priv %>
 bogus-priv
+<%- else -%>
+#bogus-priv
+<% end %>
 
 # Uncomment these to enable DNSSEC validation and caching:
 # (Requires dnsmasq to be built with DNSSEC option.)
 #conf-file=%%PREFIX%%/share/dnsmasq/trust-anchors.conf
+<% if @dnssec %>
+dnssec
+<%- else -%>
 #dnssec
+<%- end -%>
 
 # Replies which are not DNSSEC signed may be legitimate, because the domain
 # is unsigned, or may be forgeries. Setting this option tells dnsmasq to
@@ -39,7 +44,11 @@ bogus-priv
 # record somewhere between the root and the domain does not exist.
 # The cost of setting this is that even queries in unsigned domains will need
 # one or more extra DNS queries to verify.
+<% if @dnssec_check_unsigned %>
+dnssec-check-unsigned
+<% else %>
 #dnssec-check-unsigned
+<%- end -%>
 
 # Uncomment this to filter useless windows-originated DNS requests
 # which can trigger dial-on-demand links needlessly.
@@ -47,12 +56,15 @@ bogus-priv
 # so don't use it if you use eg Kerberos, SIP, XMMP or Google-talk.
 # This option only affects forwarding, SRV records originating for
 # dnsmasq (via srv-host= lines) are not suppressed by it.
+<% @filterwin2k %>
 filterwin2k
-
+<% else %>
+#filterwin2k
+<% end %>
 # Change this line if you want dns to get its upstream servers from
 # somewhere other that /etc/resolv.conf
 # 指定 resolv-file 文件路径，默认/etc/resolv.conf
-resolv-file=/etc/resolv.dnsmasq
+resolv-file=<%= @resolv_file %>
 
 # By  default,  dnsmasq  will  send queries to any of the upstream
 # servers it knows about and tries to favour servers to are  known
@@ -676,16 +688,6 @@ bogus-nxdomain=3.223.115.185
 
 # Log lots of extra information about DHCP transactions.
 #log-dhcp
-
-# Include another lot of configuration options.
-#conf-file=/etc/dnsmasq.more.conf
-#conf-dir=/etc/dnsmasq.d
-
-# Include all the files in a directory except those ending in .bak
-#conf-dir=/etc/dnsmasq.d,.bak
-
-# Include all files in a directory which end in .conf
-conf-dir=/etc/dnsmasq.d/,*.conf
 
 # If a DHCP client claims that its name is "wpad", ignore that.
 # This fixes a security hole. see CERT Vulnerability VU#598349
