--- a/templates/dnsmasq.conf.erb
+++ b/templates/dnsmasq.conf.erb
@@ -124,7 +124,13 @@ server=<%= ns %>
 
 # Add local-only domains here, queries in these domains are answered
 # from /etc/hosts or DHCP only.
-local=/sansovo.org/
+<% if @local_only_domains && !@local_only_domains.empty? then -%>
+<% @local_only_domains.each do |ns| -%>
+local=<%= ns %>
+<% end -%>
+<% else -%>
+#local=/local-example.org/
+<% end -%>
 
 # Add domains which you want to force to an IP address here.
 # The example below send any host in double-click.net to a local
@@ -133,10 +139,19 @@ local=/sansovo.org/
 
 # --address (and --server) work with IPv6 addresses too.
 #address=/www.thekelleys.org.uk/fe80::20d:60ff:fe36:f83
+<% if @domains_force_to_ip && !@domains_force_to_ip.empty? then -%>
+<% @domains_force_to_ip.each do |item| -%>
+address=<%= item %>
+<% end -%>
+<% end -%>
 
 # Add the IPs of all queries to yahoo.com, google.com, and their
 # subdomains to the vpn and search ipsets:
+<% if @ipset then -%>
+ipset=<%= @ipset%>
+<% else -%>
 #ipset=/yahoo.com/google.com/vpn,search
+<% end -%>
 
 # You can control how dnsmasq talks to a server: this forces
 # queries to 10.1.2.3 to be routed via eth1
